frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hermanvulkers.com
        - www.hermanvulkers.com
      secretName: tls-secret
  rules:
    - host: hermanvulkers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog-frontend
                port:
                  number: 80
    - host: www.hermanvulkers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog-frontend
                port:
                  number: 80
